--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
-REACT_APP_SERVER1=https://project-app122.herokuapp.com
+REACT_APP_SERVER=https://project-app122.herokuapp.com
+REACT_APP_SERVER1=http://localhost:3001
